Updated project structure, improved dark mode persistence, fixed layout issues

--- a/style/style.css
+++ b/style/style.css
@@ -54,12 +54,20 @@ header h2{
     font-size : 1.5em;
     margin-bottom : 5px;
 }
+
 header p{
     font-size :1em;
     color : #555;
 }
 .main-section{
     margin-top: 10px;
+}
+.main-section img{
+    max-width: 80%;
+    height: auto;
+    margin: 0 auto 2rem;
+    display: block;
+    border-radius: 8px;
 }
 main section{
     margin-bottom : 20px;
@@ -85,11 +93,77 @@ main section a:hover{
     color: #555;
     text-decoration: none;
 }
-
+.work a{
+    text-decoration: none;
+    color: #7A1CAC
+}
+.work a:hover{
+    text-decoration: underline;
+    color:#AD49E1
+}
 .team p {
     margin-left: 30px;
     font-size: 1em;
   }
 .team p a {
     text-decoration: none;
+    color: #7A1CAC
+}
+.team p a:hover {
+    color: #AD49E1
+}
+.dark-mode-toggle {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+}
+
+#dark-mode-btn {
+    padding: 5px 10px;
+    background: #f8eaff;
+    color: #000000;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 0.9em;
+}
+
+#dark-mode-btn:hover {
+    background: #EBD3F8;
+    color:  #000000;
+}
+
+.dark-mode {
+    background:#09122C;
+    color: #f1f1f1;
+}
+
+.dark-mode nav ul li a {
+    color: #fff;
+}
+.dark-mode header p{
+    color: #ccc;
+}
+
+.dark-mode nav ul li a:hover {
+    color: #cd9ee7;
+}
+.dark-mode .work a {
+    color: #AD49E1;
+}
+.dark-mode .team a{
+    color: #AD49E1;
+}
+.dark-mode .work a:hover {
+    text-decoration: none;
+    color: #cd9ee7;
+}
+.dark-mode .team a:hover {
+    text-decoration: none;
+    color: #cd9ee7;
+}
+.dark-mode #dark-mode-btn {
+    background: #231739;
+    /* background: #b5d0ff; */
+    color: #e9e9e9;
 }
